kubernetes/apps/default/forgejo/networkpolicy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: forgejo
    egress:
      - toFQDNs:
          - matchName: api.github.com
          - matchName: codeberg.org
          - matchName: git.sr.ht
          - matchName: github.com
          - matchName: gitlab.com
          - matchName: "release-assets.actions.githubusercontent.com"
          - matchPattern: "*.githubusercontent.com"
        toPorts:
          - ports:
              - port: "443"
